--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,9 @@ table.example4 th:first-child {width:20%;}
 <tr>
 <td>Table cell 2</td>
 </tr>
+<tr>
+<td>Table cell 3</td>
+</tr>
 </table>
 <p>Git Hub Integration with Jenkins</p>
 </body>
